--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <h1>Snake Game</h1>
     <canvas id="board" width=400 height=400></canvas>
+    <p id="score"></p>
 
     <footer>
       Created by
