add buttons for changing direction

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
   <body>
     <h1>Snake Game</h1>
     <canvas id="board" width=400 height=400></canvas>
+
+    <div>
+      <button id="up-button">⬆️</button>
+    </div>
+    <div>
+      <button id="left-button">⬅️</button>
+      <button id="right-button">➡️</button>
+    </div>
+    <div>
+      <button id="down-button">⬇️</button>
+    </div>
+
     <p id="score"></p>
 
     <footer>
