--- a/index.html
+++ b/index.html
@@ -2,24 +2,25 @@
 <html>
   <head>
     <meta charset="UTF-8">
+
+    <link href="style.css" rel="stylesheet" type="text/css">
+
     <title>Snake Game</title>
   </head>
   <body>
-    <h1>Snake Game</h1>
-    <canvas id="board" width=300 height=300></canvas>
 
-    <div>
-      <button id="up-button">⬆️</button>
-    </div>
-    <div>
-      <button id="left-button">⬅️</button>
-      <button id="right-button">➡️</button>
-    </div>
-    <div>
-      <button id="down-button">⬇️</button>
-    </div>
+      <h1>Snake Game</h1>
+      <canvas id="board" width=300 height=300></canvas>
 
-    <p id="score"></p>
+
+      <div class="buttons">
+        <button id="up-button">⬆️</button>
+        <button id="left-button">⬅️</button>
+        <button id="right-button">➡️</button>
+        <button id="down-button">⬇️</button>
+      </div>
+
+      <p id="score"></p>
 
     <footer>
       Created by
